# 3.20.09 (72232) Feb 20, 2013
2/20/13 Deploy to dev for review with UBC researchers.
Sim Sharing: Added instance id to battery current messages.
Sim Sharing: Added message rate limiting to battery current messages.
Sim Sharing: send grab bag item message, see #3497
Sim Sharing: send message when grab bag button pressed, see #3497
Sim Sharing: send message about connections to ammeter, see #3497
Sim Sharing: send message about connections to voltmeter probes, see #3497
Sim Sharing: send startDrag/endDrag for resistance/voltage sliders, see #3497
Sim Sharing: send startDrag/endDrag for voltmeter leads, see #3497
Sim Sharing: send startDrag/endDrag for non-contact ammeter, see #3497
Sim Sharing: renamed "ammeter" => "nonContactAmmeter"
Renamed VirtualAmmeterNode => NonContactAmmeterNode
Sim Sharing: Added messages for moving the ammeter probe (limit to every 500ms), see #3497
Sim Sharing: Added messages for moving the voltmeter probe nodes (limit to every 500ms), see #3497
Sim Sharing: Added messages for all components on the control panel
Sim Sharing: Added messages for flames turning off and on
Sim Sharing: Added messages for rotation/endpoint movement (limit to every 500ms)
Sim Sharing: Added message for: Configured value (battery voltage, resistance) changed (limit to every 500ms)
Sim sharing: Added sim sharing message for changes of current detected by series ammeter.
Sim sharing: Changed the sim sharing message from the voltmeter to say "undefined" instead of "NaN" when it has no value to show.  This is more consistent with what the non-contact ammeter does.
Sim sharing: Added messages from non-contact ammeter for changes to current reading.
Sim sharing: Added messages from non-contact ammeter for connections formed and broken.
Sim Sharing: Added messages for changes to the connection status of the voltmeter leads.
Sim sharing: Added messages for changes to the voltage measured by the voltmeter.