@@ -1,3 +1,5 @@
+Sim Sharing: Made the model ID match the user ID for sim sharing messages from the series ammeter.
+Sim Sharing: Improved value thresholding for series ammeter so that sim sharing messages are only sent when the readout seen by the user changes.
 # 3.20.09 (72232) Feb 20, 2013
 2/20/13 Deploy to dev for review with UBC researchers.
 Sim Sharing: Added instance id to battery current messages.
